--- a/src/styles.jade
+++ b/src/styles.jade
@@ -1,3 +1,4 @@
 // bower:css
+link(rel="stylesheet", href="/components/bootstrap/dist/css/bootstrap.css")
 // endbower
 link(rel='stylesheet', href='/css/app.css')
