--- a/src/index.jade
+++ b/src/index.jade
@@ -7,24 +7,24 @@ doctype html
 head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge')
-	title My AngularJS App
-	meta(name='description', content='')
+	title(ng-bind="$state.current.title") My Store App
+	meta(name='description', content='simple angluar based store app')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	include styles
 
 body
-	ul.menu
-		li: a(ui-sref='state1') view1
-		li: a(ui-sref='state2') view2
+	nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+		.container
+			.navbar-header
+				a.navbar-brand(ui-sref='home') My Store App
+			.navbar-collapse.collapse
+				ul.nav.navbar-nav
+					li(ui-sref-active="active"): a(ui-sref='products.list') Products
+					li(ui-sref-active="active"): a(ui-sref='products.add') Add a product
 
-
-
-	|<!--[if lt IE 7]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
-
-	div(ui-view)
-	div
-		| Angular seed app: v
-		span(app-version='app-version')
+	.container
+		|<!--[if lt IE 7]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+		div(ui-view)
 
 
 	include scripts
