--- a/src/scripts.jade
+++ b/src/scripts.jade
@@ -1,7 +1,20 @@
+// HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
+//if lt IE 9
+	script(src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js")
+	script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
+
 // bower:js
+script(src="/components/angular/angular.js")
+script(src="/components/angular-bootstrap/ui-bootstrap-tpls.js")
+script(src="/components/angular-ui-router/release/angular-ui-router.js")
+script(src="/components/angular-resource/angular-resource.js")
 // endbower
 script(src='/js/app.js')
+script(src='/js/app.config.js')
+script(src='/js/app.router.js')
+script(src='/js/app.run.js')
 script(src='/js/services/services.js')
+script(src='/js/services/product.js')
+script(src='/js/services/comment.js')
 script(src='/js/controllers/controllers.js')
-script(src='/js/filters/filters.js')
-script(src='/js/directives/directives.js')
+script(src='/js/controllers/product.js')
